dev/ds.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: student-management-dr
spec:
  host: student-management
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
